# master_labeling

./: CMakeLists.txt  README.md  config.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytcpserver.cpp  rubbish_bin.qrc  vars.xml
files_to_run/: 27-08-2021_ki_line_№7.txt  positions.xml  vsd.csv
